@@ -1,3 +1,7 @@
+2008-08-23  Andreas Kupries  <andreask@activestate.com>
+
+	* generic/tclIO.c: Backport of fix for [Bug 2333466].
+
 2008-11-18  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* generic/tcl.decls:   Fix signature and implementation of
